[package]
name = "warp-example"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.8.1", features = ["full"] }
tokio-stream = { version = "0.1.8", features=["sync"] }
warp = "0.3.2"
mobc-postgres = { version = "0.5", features = ["with-chrono-0_4"] }
mobc = "0.5"
serde = {version = "1.0.132", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3.0"
uuid = { version = "0.8.2",  features = ["v4"] }
futures-util = { version = "0.3.19", features = ["sink"] }
# futures-sink = "0.3.19"
pretty_env_logger = "0.4.0"
